--- a/Visual II/Final Project/src/main/java/UI/TrianglePanel.form
+++ b/Visual II/Final Project/src/main/java/UI/TrianglePanel.form
@@ -16,7 +16,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-        <Group type="102" alignment="0" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <Component id="homeBackground" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
@@ -24,7 +24,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-        <Group type="102" alignment="0" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <Component id="homeBackground" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -49,12 +49,12 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="363" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="titleLbl" alignment="1" min="-2" pref="258" max="-2" attributes="0"/>
+                              <Component id="titleLbl" alignment="1" min="-2" pref="258" max="-2" attributes="0"/>
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="btcAmtFinal" min="-2" pref="84" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="btcLbl" min="-2" pref="70" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <Component id="btcLbl" min="-2" pref="76" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" max="-2" attributes="0"/>
                                   <Component id="btcAmtStart" min="-2" pref="84" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -83,17 +83,17 @@
                   <Component id="titleLbl" min="-2" pref="31" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                    <Component id="btcLbl" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
                       <Component id="btcAmtStart" alignment="0" min="-2" pref="33" max="-2" attributes="0"/>
                       <Component id="btcAmtFinal" alignment="0" min="-2" pref="33" max="-2" attributes="0"/>
+                      <Component id="btcLbl" min="-2" pref="64" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="54" max="32767" attributes="0"/>
+                  <EmptySpace pref="49" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btcltcRateLbl" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                       <Component id="ethbtcRateLbl" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
-                    <Group type="102" alignment="0" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="120" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="ltcLbl" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
@@ -130,7 +130,6 @@
               <Font name="Sitka Display" size="14" style="1"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="LTC"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="btcLbl">
@@ -139,7 +138,6 @@
               <Font name="Sitka Display" size="14" style="1"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="BTC"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="ethLbl">
@@ -148,7 +146,6 @@
               <Font name="Sitka Display" size="14" style="1"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="ETH"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="btcltcRateLbl">
@@ -229,6 +226,6 @@
           </Properties>
         </Component>
       </SubComponents>
-      </Container>
+    </Container>
   </SubComponents>
 </Form>
